# competitors-club

./: .gitignore  Makefile  NODE-OPERATOR.md  README.md  events.txt
docker/: Dockerfile  docker-compose.yml  mainnetSpecRaw.json
kube/deployments/: faucet.yaml  landing.yaml  node0.yaml  node1.yaml  node2.yaml
kube/drafts/: node-0.yaml  readme
kube/ingress/: cc_ingress.yaml  ingress_nginx_svc.yaml  prod_issuer.yaml  staging_issuer.yaml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/vies/: Cargo.toml
pallets/vies/src/: benchmarking.rs  lib.rs  models.rs  types.rs
resources/: notes.txt
runtime/: Cargo.toml
runtime/src/: lib.rs
specs/: pallets.json  types.json
specs/genesis/: mainnetSpec.json
wasm/: competitors_club_runtime-v1.0.1.wasm  competitors_club_runtime-v1.0.2.wasm
